--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "scripts": {
-        "test": "jest"
+        "start": "node serve.js",
+        "test": "jest",
+        "dev": "nodemon"
     },
     "jest": {
         "testEnvironment": "jest-environment-jsdom"
@@ -11,5 +13,9 @@
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jsdom": "^26.0.0"
+    },
+    "dependencies": {
+        "express": "^5.1.0",
+        "nodemon": "^3.1.10"
     }
 }
