--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
         "start": "node serve.js",
-        "test": "jest",
+        "test": "jest --verbose",
         "dev": "nodemon"
     },
     "jest": {
